--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.15",
     "tailwindcss": "^4.1.15",
     "vue": "^3.5.22",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
