Mise à jour des variables dans .env

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 DB_CONNECTION=mysql
-DB_HOST=<Railway host>
-DB_PORT=<Railway port>
-DB_DATABASE=<Railway database>
-DB_USERNAME=<Railway username>
-DB_PASSWORD=<Railway password>
+DB_HOST=${DB_HOST}
+DB_PORT=${DB_PORT}
+DB_DATABASE=${DB_DATABASE}
+DB_USERNAME=${DB_USERNAME}
+DB_PASSWORD=${DB_PASSWORD}
