--- a/server/.env
+++ b/server/.env
@@ -2,5 +2,5 @@ DB_CONNECTION=mysql
 DB_HOST=${DB_HOST}
 DB_PORT=${DB_PORT}
 DB_DATABASE=${DB_DATABASE}
-DB_USERNAME=${DB_USERNAME}
+DB_USER=${DB_USER}
 DB_PASSWORD=${DB_PASSWORD}
